# spotify2youtube

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/: requirements.txt
airflow/dags/: spotify_youtube_sync_dag.py
config/: firestore_config.py  settings.py  vector_config.py
core/: embeddings.py  secure_cache_handler.py  spotify_client.py  vector_db.py  youtube_client.py
database/: firestore_ops.py
routers/: connection.py  playlist.py
scripts/: migrate_vectors.py  update_payloads.py
utils/: helpers.py  logger.py  metrics.py
